update: fixed overflow on html tag

--- a/reset.css
+++ b/reset.css
@@ -21,6 +21,8 @@ button {
     cursor: pointer;
 }
 
-body{
-  overflow: scroll;
+html{
+
+  overflow: hidden;
+
 }
