--- a/style.css
+++ b/style.css
@@ -4,8 +4,8 @@ body {
     display: flex;
     padding: var(--padding-body);
     color: #d8dfeb;
-    background: rgb(172,73,237);
-    background: linear-gradient(304deg, rgba(172,73,237,1) 30%, rgba(32,27,228,1) 83%);
+    background: rgb(8,1,135);
+    background: linear-gradient(135deg, rgba(8,1,135,1) 15%, rgba(29,29,208,1) 62%, rgba(0,212,255,1) 99%);
 }
 
 .buttonsContainer {
